@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -7,10 +7,10 @@
  * Subject to the condition set forth below, permission is hereby granted to any
  * person obtaining a copy of this software, associated documentation and/or
  * data (collectively the "Software"), free of charge and under any and all
- * copyright rights in the Software, and any and all patent rights owned or
- * freely licensable by each licensor hereunder covering either (i) the
- * unmodified Software as contributed to or provided by such licensor, or (ii)
- * the Larger Works (as defined below), to deal in both
+ * copyright rights in the Software, and any and all patent rights owned or freely
+ * licensable by each licensor hereunder covering either (i) the unmodified
+ * Software as contributed to or provided by such licensor, or (ii) the Larger
+ * Works (as defined below), to deal in both
  *
  * (a) the Software, and
  *
@@ -38,43 +38,26 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
-
 package org.graalvm.python.embedding.tools.exec;
 
-/**
- * Build tool verbosity: maven - debug, info, warning, error gradle - debug,
- * info, lifecycle, warning, error
- */
-public interface BuildToolLog {
-	void subProcessOut(String out);
+import org.graalvm.python.embedding.tools.JavaToolchain;
+import org.junit.jupiter.api.Test;
 
-	void subProcessErr(String err);
+import java.nio.file.Path;
 
-	default void lifecycle(String s) {
-		info(s);
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+
+public class GraalPyRunnerTest {
+
+	@Test
+	public void detectsExtraOptionsFromConfiguredJavaVersion() {
+		assertArrayEquals(new String[]{"--sun-misc-unsafe-memory-access=allow"}, GraalPyRunner
+				.getExtraJavaOptions(JavaToolchain.fromJavaExecutable(Path.of("custom-java-home", "bin", "java"), 25)));
 	}
 
-	void info(String s);
-
-	void warning(String s);
-
-	void warning(String s, Throwable t);
-
-	void error(String s);
-
-	void debug(String s);
-
-	boolean isWarningEnabled();
-
-	default boolean isLifecycleEnabled() {
-		return true;
+	@Test
+	public void skipsExtraOptionsForOlderConfiguredJavaVersion() {
+		assertArrayEquals(new String[0], GraalPyRunner
+				.getExtraJavaOptions(JavaToolchain.fromJavaExecutable(Path.of("custom-java-home", "bin", "java"), 21)));
 	}
-
-	boolean isInfoEnabled();
-
-	boolean isErrorEnabled();
-
-	boolean isDebugEnabled();
-
-	boolean isSubprocessOutEnabled();
 }
